--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "13.0.5",
     "next-superjson": "^0.0.4",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-flip-move": "^3.0.4",
     "react-infinite-scroll-component": "^6.1.0",
