--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
         {
             "source": "/",
             "destination": "/?type=movies&genre=fetchingTrending&page=1",
-            "permanent": true
+            "permanent": false
         }
     ]
   }
